src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>MGE Support Process</fullName>
        <description>Monash Graduate Education Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Investigation</fullName>
        </values>
        <values>
            <fullName>Referred Off-System</fullName>
        </values>
        <values>
            <fullName>Referred by Phone</fullName>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Monash Light Touch</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Investigation</fullName>
        </values>
        <values>
            <fullName>Referred</fullName>
        </values>
        <values>
            <fullName>Referred Off-System</fullName>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Monash Schools Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Referred Off-System</fullName>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Monash Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Investigation</fullName>
        </values>
        <values>
            <fullName>Referred Off-System</fullName>
        </values>
        <values>
            <fullName>Referred by Phone</fullName>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SR Support Process</fullName>
        <description>Student Recruitment Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Customer Feedback</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Investigation</fullName>
        </values>
        <values>
            <fullName>Referred Off-System</fullName>
        </values>
        <values>
            <fullName>Referred by Phone</fullName>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Academic_Unit__c</fullName>
        <label>Academic Unit</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alerts__c</fullName>
        <description>if unread email to view, then show a bubble in list view</description>
        <formula>IF(
 NOT(ISBLANK( Latest_Inbound_Email__c ))  ,IMAGE(&quot;/resource/new_mail_icon&quot;,&quot;Unread email has arrived&quot;,24,24),&quot;&quot;)</formula>
        <label>Unread Email Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The original name of record from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Outcome_Status__c</fullName>
        <description>copied over from SMS at time of linking an application within the console</description>
        <label>Application Outcome Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Response_Status__c</fullName>
        <label>Application Response Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_Research_Interest__c</fullName>
        <label>Area of Research Interest</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Icon__c</fullName>
        <formula>IF(  Has_Attachment__c ,
IMAGE(&quot;/resource/AttachmentIcon&quot;,&quot;Enquiry has Attachment&quot;,24,24),
NULL)</formula>
        <label>Attachment Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode__c</fullName>
        <label>Attendance Mode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Type__c</fullName>
        <label>Attendance Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Name__c</fullName>
        <description>used to assist with isolating case ownership by Queue or User, in list views</description>
        <formula>IF(
  ISBLANK(Owner:User.Id), /* If blank, it&apos;s a queue */
  Owner:Queue.QueueName,
  &quot;User&quot;
)</formula>
        <label>Case Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <description>when populated, at insert CaseServices logic will attempt to set RecordTypeId to the Id of the Case Record Type Name stored on this field. Exists to assist with external web to form submits to Service queues</description>
        <label>Case Record Type to set</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Level_1__c</fullName>
        <description>case categorisation - top level</description>
        <label>Category Level 1</label>
        <picklist>
            <controllingField>Enquiry_Type__c</controllingField>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Pickup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of preference (COP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crisis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directions/Maps/Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directors Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment - Current Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment - Future Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment Questionnaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entry Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exams, Assessments, &amp; Assignments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exams &amp; Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed ID Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Level_2__c</fullName>
        <description>Case categorisation - second level</description>
        <label>Category Level 2</label>
        <picklist>
            <controllingField>Category_Level_1__c</controllingField>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Director and Chair of Examiners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Dress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Dress Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Staff Workshops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptance/ECOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptance - Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acceptance - International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Monash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accomodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS Results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Enquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activity Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admissions Criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Standing/Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHEGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Pick-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airport Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocate+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocate+/MUTTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allocate+ Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alt Exit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Assistance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Level_3__c</fullName>
        <description>Case categorisation - lowest level of 3</description>
        <label>Category Level 3</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postgraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor overload</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Citizenship_at_Enquiry__c</fullName>
        <description>retrieved in real time from SMS and stored at time of enquiry creation</description>
        <label>Citizenship at time of Enquiry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Feedback_Status__c</fullName>
        <label>Client Feedback Status</label>
        <picklist>
            <picklistValues>
                <fullName>Client Survey Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Feedback Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Feedback for QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Feedback Reviewed - No action req</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Feedback Reviewed - Action req</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commencement_Year__c</fullName>
        <label>Commencement Year</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Attempt_Status__c</fullName>
        <label>Course Attempt Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>used to store linked course code when managing enquiry</description>
        <label>Course Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Managing_Faculty__c</fullName>
        <description>surfaces a faculty to user, if course has been linked to case.</description>
        <formula>IF(ISBLANK(Course__c),
 Current_Course_Faculty__c ,
 TEXT(Course__r.Managing_Faculty__c)
)</formula>
        <label>Course Managing Faculty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Specialisation__c</fullName>
        <description>where applicable, the specialisation associated with a course, populated from a web to case form.  The Course_Specialisation formula field links directly to the specialisation of a course via the course record.</description>
        <label>Course Specialisation String</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Specialisation_formula__c</fullName>
        <description>a lookup to a course record, assuming it has been linked to case</description>
        <formula>IF(NOT(ISBLANK(Course__r.Specialisation__c)),
Course__r.Specialisation__c,
 Course_Specialisation__c )</formula>
        <label>Course Specialisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <label>Course Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title_f__c</fullName>
        <description>used to present either old text description stamped on crm v1 records, or to pull in linked course title from records created in crm v2</description>
        <formula>IF(ISBLANK(Course__c),
 Course_Title__c ,
  Course__r.Course_Description__c 
)</formula>
        <label>Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Course__c.Original_ID__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Linked Enquiries</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>needed to be able to display case created date in console - strange but true!</description>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Course_Faculty__c</fullName>
        <label>Current Course Faculty</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Defer_From__c</fullName>
        <label>Defer From</label>
        <picklist>
            <picklistValues>
                <fullName>Graduate Research degree only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarship PLUS Graduate Research degree</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_To__c</fullName>
        <description>if the case originated from an inbound email, then trigger on emailMessage would have populated this field on case for us, so can use inbound email address to help with case queue assignment.</description>
        <label>Email Case Originated From</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Interest_Count_at_Update__c</fullName>
        <description>populated via trigger logic at update, and used in validation rules.  If POPULATE_ENQUIRY_INTEREST_COUNT is disabled, then this field is set to zero. This field should not be used for reporting.</description>
        <label>Enquiry Interest Count at Update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enquiry_Origin_Category__c</fullName>
        <formula>IF( BEGINS( TEXT( Origin ), &apos;Email -&apos;), &apos;Email&apos;,
IF( BEGINS( TEXT( Origin ), &apos;Web -&apos;), &apos;Web&apos;,
IF( BEGINS( TEXT( Origin ), &apos;course enquiry webform&apos;), &apos;Web&apos;,
IF( BEGINS( TEXT( Origin ), &apos;Social Media -&apos;), &apos;Social&apos;,
TEXT( Origin )
))))</formula>
        <label>Enquiry Origin Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Owner_Department__c</fullName>
        <description>Captures the department that owns the enquiry(case).</description>
        <label>Enquiry Owner Department</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Owner_Role__c</fullName>
        <description>Used for reporting purposes and list views. This field indicates what role the user is assigned to</description>
        <formula>if( 
Case_Owner_Name__c = &quot;User&quot;, Owner:User.UserRole.Name , 
Case_Owner_Name__c 
)</formula>
        <label>Enquiry Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enquiry_Reopened__c</fullName>
        <description>if case status moves from closed to open, then this field is stamped with the current datetime</description>
        <label>Enquiry Re-opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <description>Captures the nature of the enquiry (i.e., Future vs Current course)</description>
        <label>Enquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Centre Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolment Extension​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How To Apply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leave Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milestone Management (Progress Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Doctoral Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Researcher Development​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Student Enrolment​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>​S​cholarships​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thesis Submission​</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academic Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Client</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Faculty_Email_Mapping__c</fullName>
        <formula>CASE( TEXT(Faculty__c),
&apos;Art, Design &amp; Architecture&apos;, &apos;artdes-postgrad@monash.edu&apos;,
&apos;Arts&apos;, &apos;arts.research.degree@monash.edu&apos;,
&apos;Business and Economics&apos;, &apos;buseco-research.degrees@monash.edu&apos;,
&apos;Education&apos;, &apos;education-researchdegrees@monash.edu&apos;,
&apos;Engineering&apos;, &apos;eng-it-research.student@monash.edu&apos;,
&apos;Information Technology&apos;, &apos;eng-it-research.student@monash.edu&apos;,
&apos;Law&apos;, &apos;law-graduate-research@monash.edu&apos;,
&apos;Medicine, Nursing and Health Sciences&apos;, &apos;med-research.degrees@monash.edu&apos;,
&apos;MUARC&apos;, &apos;Samantha.bailey@monash.edu&apos;,
&apos;Pharmacy and Pharmaceutical Sciences&apos;, &apos;vanalysa.ly@monash.edu&apos;,
&apos;Science&apos;, &apos;sci-gradresearch@monash.edu&apos;,
&apos;mge-apply@monash.edu&apos;)</formula>
        <label>Faculty Email Mapping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Email__c</fullName>
        <label>Faculty Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <picklist>
            <picklistValues>
                <fullName>Art, Design and Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business and Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicine, Nursing and Health Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Injury Research Institute (MIRI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Short course Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MUARC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy and Pharmaceutical Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Pathways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known/Undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_Owner_is_Queue__c</fullName>
        <formula>IF(  ISBLANK( Owner:Queue.Id ), FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Owner is Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_end_time__c</fullName>
        <label>Follow up end time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Follow_up_start_time__c</fullName>
        <label>Follow up start time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Graduate_Research_Program_of_Interest__c</fullName>
        <label>Graduate Research Program of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Monash PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Doctorate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Heard_About_From__c</fullName>
        <label>Heard About From</label>
        <picklist>
            <picklistValues>
                <fullName>Banners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Monash Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education / Exhibition Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend / Family residing in Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend / Relative Studying at Monash University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Open Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash recruitment staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Monash Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postgraduate Expo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School / School Counsellors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Visit by Monash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit to Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Study__c</fullName>
        <description>highest level of study that an enquirer has achieved at time of submitting enquiry</description>
        <inlineHelpText>highest level of study that an enquirer has achieved at time of submitting enquiry</inlineHelpText>
        <label>Highest Level of Study</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postgraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelors with Honours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Campus__c</fullName>
        <label>Home Campus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Inbound_Email__c</fullName>
        <description>if populated, then an inbound email has been received against the enquiry</description>
        <label>Latest Inbound Email</label>
        <type>DateTime</type>
    </fields>
</CustomObject>